Bug 942399 - Fix -Wunused-private-field warnings in media/webrtc/signaling. r=rjesup